--- a/main.css
+++ b/main.css
@@ -8,18 +8,41 @@ body {
 	display: grid;
 }
 
+/* Background */
 
 .background {
-	background-image: linear-gradient(45deg, rgb(117, 45, 209), rgb(116,72,215), rgb(115,111,223));
-	height: 75vh; 
-	position: relative;
-	padding: 20px;
+    background-color: rgb(117, 45, 209);
+    width: 100%;
+    height: 334px;
+    transform: skewY(-11deg);
+    z-index: 10;
+    position: absolute;
+    top: -289px;
 }
+.background2 {
+    background-color: rgb(116,72,215);
+    height: 573px;
+    width: 100%;
+    position: absolute;
+	z-index: -10;
+}
+.background3 {
+    background-color: rgb(115,111,223);
+    height: 205px;
+    width: 100%;
+    transform: skewY(-8deg);
+    position: absolute;
+    top: 470px;
+}
+
+/* Navbar */
 
 nav {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: auto; 
+	grid-auto-rows: auto;
+	margin: 40px 40px 0px 0px;
+	z-index: 10;
 }
 
 nav a {
@@ -47,48 +70,229 @@ nav a {
 	text-decoration: none;
 	padding: 8px 30px;
 	box-shadow: 0px 2px 5px;
+	border-radius: 8px;
+	box-shadow: 0px 2px 5px rgb(61, 43, 102);
+}
+
+.button:hover {
+	box-shadow: 0px 2px 5px rgb(217, 204, 247);
 }
 
 header {
 	display: grid;
 	grid-template-columns: repeat(14, 1fr);
-	grid-template-rows: repeat(5, 1fr);
+	grid-template-rows: 80px 160px 220px 300px;
 	color: white;
 	text-align: center;
-	
 }
 
-.header {
-	grid-column: 5 / 10;
+.header-description{
+	grid-column: 6 / 10;
 	grid-row: 2;
+	font-size: 40px;
 }
 
 .inputbox {
-	grid-column: 5 / 8;
+	grid-column: 6 / 9;
 	grid-row: 3;
 	height: 30px;
 	border-radius: 10px;
 	border-style: none;
 	padding: 10px;
+	font-family: 'Raleway', sans-serif;
 }
 
 #search {
-	grid-column: 8 / 9;
-	
+	grid-column: 9 / 9;
 	grid-row: 3;
 	height: 30px;
 	border-radius: 10px;
-	padding: 10px;
+	padding: 10px 10px 10px 10px;
+	text-align: center;
 	border-style: none;
 	color: white;
 	margin-left: 10px;
+	
 }
 
 #text {
 	grid-column: 6 / 10;
-	grid-row: 5;
+	grid-row: 4;
+	font-family: 'Raleway', sans-serif;
+	z-index: 10;
 }
 
 #text-emphasize {
 	color: rgb(129,211,152);
+	z-index: 10;
 }
+
+#circle-button {
+	background-color: rgb(129,211,152);
+	height: 60px;
+	width: 60px;
+	grid-column: 8;
+	grid-row: 4;
+	margin-top: 40px;
+	border-radius: 50%;
+	z-index: 10;
+}
+
+#circle-button:hover {
+	box-shadow: 0px 2px 5px rgb(217, 204, 247);
+}
+
+#arrow {
+	width: 30%;
+}
+
+/* Product Description */
+
+.product-description {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: 1fr;
+	font-family: 'Raleway', sans-serif;
+
+}
+
+.product-description .container {
+	grid-column: 2 / 6;
+	text-align: center;
+	line-height: 1.5em;
+	font-size: 1rem;
+	padding-bottom: 10px;
+}
+
+.product-description button {
+	background-color: rgb(116, 72, 215);
+	font-family: 'Raleway', sans-serif;
+	color: white;
+	padding: 10px 30px;
+	border-radius: 10px;
+
+}
+
+/* Product Listing */
+.wrapper {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-auto-rows: minmax(100px, auto);
+	margin: 0 auto;
+	/* grid-template-areas: 
+	"header header header header"
+	"title1 title1 "
+	"description1 description1 "
+	"title2 title2 "
+	"description2 description2 " */
+}
+
+.nested {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 20px;
+	/* grid-column: span 3; */
+}
+
+.nested div {
+	border: 1px solid;
+	padding: 10px 10px 30px 0px;
+	background-color: rgb(252,252,253);
+	border-radius: 10px;
+	grid-template-columns: 4 / 7;
+
+}
+
+.nested div h4 {
+	text-transform: capitalize;
+}
+
+/* Signup  & Contact */
+
+.signup {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-row: 6;
+
+}
+
+.signup div {
+	grid-column: 2 / 4;
+}
+
+.signup h3 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+	color: rgb(115, 111, 223);
+}
+
+.signup h3#subtext {
+	color: rgb(116, 72, 215);
+	font-weight: 500;
+}
+
+.button span {
+	font-size: .8rem;
+	font-weight: 500;
+}
+
+.button#create-account-btn {
+	background-color: rgb(116, 72, 215);
+	color: white;
+	height: 20px;
+	width: 150px;
+
+	border-radius: 10px;
+	grid-column: 6;
+	/* grid-gap: 10px; */
+}
+
+.button#contact-btn {
+	background-color: rgb(255, 255, 255);
+	color: black;
+	height: 20px;
+	/* grid-gap: 10px; */
+	border-radius: 10px;
+}
+
+
+
+/* Footer */
+footer {
+	display: grid;
+	grid-template-columns: repeat(14. 1fr);
+	grid-template-rows: 2;
+	background-color: rgb(115,111,223);
+	color: white;
+	padding: 80px;
+}
+
+.col1 {
+	grid-column: 2;
+	
+}
+
+.col2 {
+	grid-column: 4;
+	
+}
+
+.col3 {
+	grid-column: 6;
+	
+}
+
+.col4 {
+	grid-column: 8;
+}
+
+.col5 {
+	grid-column: 11;
+}
+
+.col6 {
+	grid-column: 12;
+}
+
+
+
