--- a/main.css
+++ b/main.css
@@ -1,356 +1,549 @@
 body {
-	font-family: 'Montserrat', sans-serif;
-	margin: 0;
+font-family: 'Montserrat', sans-serif;
+margin: 0;
+font-size: 1.1vw;
 }
 
 
-.div-wrapper {
-	display: grid;
-}
+/* Background colors */
 
-/* Background */
-
-.background {
+#drk-purple {
     background-color: rgb(117, 45, 209);
-    width: 100%;
-    height: 334px;
+    width: 100vw;
+    height: 35vh;
+	top: -22%;
+	z-index: -10;
     transform: skewY(-11deg);
-    z-index: 10;
     position: absolute;
-    top: -289px;
 }
-.background2 {
+#med-purple {
     background-color: rgb(116,72,215);
-    height: 573px;
-    width: 100%;
-    position: absolute;
+    height: 60vh;
+	width: 100vw;
 	z-index: -10;
+	transform: skewY(-10deg);
+    position: absolute;
 }
-.background3 {
+#light-purple {
     background-color: rgb(115,111,223);
-    height: 205px;
-    width: 100%;
-    transform: skewY(-8deg);
+    height: 25vh;
+    width: 100vw;
+	top: 60%;
+	z-index: -10;
+    transform: skewY(-10deg);
     position: absolute;
-    top: 470px;
 }
-.background4 {
+#gray {
     background-color: rgb(246,249,252);
-    height: 400px;
+    height: 60%;
     width: 100%;
+	top: 190%;
     transform: skewY(-8deg);
-    position: absolute;
-	top: 1470px;
+	position: absolute;
 	z-index: -10;
 }
 
-/* Navbar */
 
-nav {
+/* --------Content Grid---------- */
+#wrapper {
 	display: grid;
+	height: 100%;
 	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: auto;
-	margin: 40px 40px 0px 0px;
-	z-index: 10;
-}
-
-nav a {
-	text-decoration: none;
-	color: white;
+	grid-template-rows: auto auto auto auto;
+	margin-top: 20px;
+	max-width: 1600px;
+	grid-template-areas:
+	". . logo  . . . home whyus contact login support-btn ." 
+	". . . . main main main main . . . ."
+	". . . . input input input search-btn . . . ."
+	". . . . header-text header-text header-text header-text . . . ."
+	". . . . . circle-btn circle-btn . . . . . "
+	". . section1 section1 section1 section1 section1 section1 section1 section1 . ."
+	". . . . create-btn create-btn create-btn create-btn . . . ."
+	". . . . service-header service-header service-header service-header . . . . "
+	". scL scL scL scL scL scR scR scR scR scR ."
+	". bottom-container bottom-container bottom-container bottom-container . . . create-acnt-btn create-acnt-btn contact-btn .";
+	/* "footer footer footer footer footer footer footer footer footer footer footer footer";	 */
 }
 
 .navLinks {
-	font-size: .85rem;
-}
-
-.logo {
-	grid-column: 2;
-	font-weight: bold;
-	font-size: 1.4rem;
-}
-
-.home {
-	grid-column: 8;
-}
-
-.button {
-	background-color: rgb(129,211,152);
-	border: none;
+	font-size: 1vw;
 	text-decoration: none;
-	padding: 8px 30px;
-	box-shadow: 0px 2px 5px;
+	color: white;
+	padding-top: 8px;
+	justify-self: center;
+}
+
+#support-btn{
+	background-color: rgb(129,211,152);
+	text-decoration: none;
+	color:white;
+	text-align: center;
+	padding: 10px 0px 10px 0px;
 	border-radius: 8px;
 	box-shadow: 0px 2px 5px rgb(61, 43, 102);
+	font-size: 1vw;
 }
 
-.button:hover {
-	box-shadow: 0px 2px 5px rgb(217, 204, 247);
-}
-
-header {
+#navbar {
+	grid-area: navbar;
 	display: grid;
-    grid-template-columns: repeat(24, 1fr);
-    grid-template-rows: 80px 160px 254px 253px;
-    color: white;
-    text-align: center;
 }
 
-.header-description{
-	grid-column: 10 / 17;
-	grid-row: 2;
-	font-size: 40px;
+#logo {
+	grid-area: logo;
 }
 
-.inputbox {
-	grid-column: 10 / 15;
-	grid-row: 3;
+#home{
+	grid-area: home;
+}
+
+#whyUs {
+	grid-area: whyus;
+}
+
+#contact {
+	grid-area: contact;
+}
+
+#login {
+	grid-area: login;
+}
+
+#support-btn {
+	grid-area: support-btn;
+}
+
+#text-colorize {
+	color: rgb(129,211,152);
+}
+
+#logo {
+	color: white;
+	font-weight: bold;
+	font-size: 1.4rem;
+	text-decoration: none;
+}
+
+/* Main page */
+.main-content {
+	grid-area: main;
+	justify-self: center;
+	margin-top: 90px;
+	font-size: 1.2vw;
+	color: white;
+}
+
+input {
+	grid-area: input;
 	height: 30px;
 	border-radius: 10px;
 	border-style: none;
-	padding: 10px;
+	padding: 2% 10%;
+	font-size: 1vw;
 	font-family: 'Raleway', sans-serif;
+	margin-right: 10px;
 }
-
-#search {
-	grid-column: 15 / 17;
-	grid-row: 3;
-	height: 30px;
+#search-btn {
+	grid-area: search-btn;
+	background-color: rgb(129,211,152);
 	border-radius: 10px;
-	padding: 10px 10px 10px 10px;
+	box-shadow: 0px 2px 5px rgb(61, 43, 102);
+	padding: 15px;
 	text-align: center;
 	border-style: none;
+	text-decoration: none;
 	color: white;
-	margin-left: 10px;
-
-}
-
-#text {
-	grid-column: 10 / 17;
-	grid-row: 4;
 	font-family: 'Raleway', sans-serif;
-	z-index: 10;
+	font-size: 1vw;
 }
 
-#text-emphasize {
-	color: rgb(129,211,152);
-	z-index: 10;
+#learn-more-text {
+	grid-area: header-text;
+	justify-self: center;
+	margin-top: 50%;
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	font-size: 1.3vw;
 }
 
-#circle-button {
+#circle-btn {
+	grid-area: circle-btn;
 	background-color: rgb(129,211,152);
 	height: 60px;
 	width: 60px;
-	grid-column: 13;
-	grid-row: 4;
-	margin-top: 40px;
+	justify-self: center;
 	border-radius: 50%;
 	z-index: 10;
-	margin-top: 71px;
 	color: white;
-}
-
-#circle-button:hover {
-	box-shadow: 0px 2px 5px rgb(217, 204, 247);
+	margin-top: 1vw;
 }
 
 #arrow {
-	font-size: 40px;
+	grid-area: arrow;
+	z-index: 10;
+	font-size: 3vw;
 	padding: 10px;
+	color: white;
 }
 
-/* Product Description */
 
-.product-description {
-	display: grid;
-	grid-template-columns: repeat(24, 1fr);
-	grid-template-rows: 1fr;
-	font-family: 'Raleway', sans-serif;
+/* ------------ SECTIONS ------------- */
 
-}
-
-.product-description .container {
-	grid-column: 8 / 19;
-	text-align: center;
+/* Section 1 */
+.section1 {
+	grid-area: section1;
+	margin-top: 15%;
 	line-height: 1.5em;
-	font-size: 18px;
+	text-align: center;
+	font-size: 1.2vw;
+	font-weight: 300;
 }
 
-.product-description button {
+#create-btn {
+	grid-area: create-btn;
 	background-color: rgb(116, 72, 215);
 	font-family: 'Raleway', sans-serif;
 	color: white;
 	padding: 10px 30px;
 	border-radius: 10px;
-
+	justify-self: center;
+	font-size: 1vw;
+	margin-bottom: 20%;
+	margin-top: 30px;
 }
 
-/* Product Listing */
-.service {
-	display: grid;
-	grid-template-columns: repeat(36, 1fr);
-	margin-top: 7%;
+/* Section 2 */
+.service-header {
+	grid-area: service-header;
+	justify-self: center;
+	margin-bottom: 5%;
 }
 
 #header {
-	display: grid;
-	grid-column: 18 / 22;
-	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
-	font-size: 20px;
-	height: 20px;
+	font-size: 1.7vw;
+	margin: 0;
 }
-
 hr {
 	border: none;
 	height: 2px;
 	color: black;
 	background-color: black;
 	width: 50px;
-	margin-bottom: 2%;
-	margin-left: 50%;
+	justify-self: center;
 }
 
-
-.wrapper {
-	display: grid;
-    grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: 2;
-	position: relative;
+.service-containerL {
+	grid-area: scL;
 }
 
-.nested {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-	margin: 20px 150px 60px 100px;
+.service-containerR {
+	grid-area: scR;
 }
-.nested div img {
+
+.service-card1 {
+	grid-area: sc1;
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+.service-card2{
+	grid-area: sc2;
+	margin-right: 20px;
+}
+
+.service-card3 {
+	grid-area: sc3;
+	margin-bottom: 20px;
+}
+
+.service-card4 {
+	grid-area: sc4;
+	
+	
+}
+.service-card1 img {
+	float: left;
+	width: 20%;
+	margin-top: 3%;
+	margin-right: 20px;
+	
+}
+
+.service-card2 img {
 	float: left;
 	width: 20%;
 	margin-top: 3%;
 	margin-right: 20px;
 }
-.nested div {
+
+.service-card3 img {
+	float: left;
+	width: 20%;
+	margin-top: 3%;
+	margin-right: 20px;
+}
+
+.service-card4 img {
+	float: left;
+	width: 20%;
+	margin-top: 3%;
+	margin-right: 20px;
+}
+
+.service-card1 , .service-card2, .service-card3, .service-card4 {
 	border: 1px solid rgb(189, 189, 189);
 	padding: 10px 10px 10px 0px;
 	background-color: rgb(242, 242, 242);
 	border-radius: 10px;
 }
 
-.description {
-	font-size: 13px;
-}
-
-
-/* Signup  & Contact */
-
-.signup {
-	display: grid;
-	grid-template-columns: repeat(24, 1fr);
-	grid-row: 6;
-	margin-bottom: 40px;
-}
-
-.signup div {
-	grid-column: 3 / 10;
-}
-
-.signup h3 {
+/* Section 3 */
+#bottom-context{
+	grid-area: bottom-container;
 	font-family: 'Montserrat', sans-serif;
+	margin-top: 100px;
+	margin-bottom: 70px;
+}
+
+#bottom-context h3 {
 	font-weight: 300;
-	font-size: 20px;
+	font-size: 1.7vw;
 	color: rgb(115, 111, 223);
 }
 
-.signup h3#subtext {
+#bottom-context h3#subtext {
 	color: rgb(116, 72, 215);
 	font-weight: 400;
 }
 
-.button span {
-	font-size: .7rem;
-	font-weight: 500;
-}
-
 .button#create-account-btn {
+	grid-area: create-acnt-btn;
 	background-color: rgb(116, 72, 215);
-	color: white;
+	box-shadow: 0px 3px 10px rgb(61, 43, 102);
 	height: 20px;
-	width: 160px;
+	width: 170px;
 	padding-right: 0px;
-	padding-left: 15px;
+	padding-left: 25px;
+	padding-top: 10px;
+	margin-top: 120px;
+	margin-right: 10px;
+	font-size: .8vw;
+	text-decoration: none;
+	font-family: 'Raleway', sans-serif;
+	color: white;
 	border-radius: 10px;
-	grid-column: 20;
+	justify-self: end;
 }
 
-.button#contact-btn {
+.button#create-account-btn:hover {
 	background-color: rgb(255, 255, 255);
 	color: black;
+	box-shadow: 0px 3px 10px rgb(61, 43, 102);
+}
+.button#contact-btn {
+	grid-area: contact-btn;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 3px 10px rgb(61, 43, 102);
 	height: 20px;
-	width: 80px;
+	width: 100px;
+	padding-right: 0px;
+	padding-left: 25px;
+	padding-top: 10px;
+	margin-top: 120px;
+	margin-left: 10px;
+	font-size: .8vw;
+	text-decoration: none;
+    color: black;
+	font-family: 'Raleway', sans-serif;
 	border-radius: 10px;
-	margin-left: 20px;
+	justify-self: end;
 }
 
+.button#contact-btn:hover {
+	grid-area: contact-btn;
+	background-color: rgb(116, 72, 215);
+	color: white;
+} 
 
-
-/* Footer */
+/* ---------Footer----------- */
 footer {
+	grid-area: footer;
 	display: grid;
-	grid-template-columns: repeat(14. 1fr);
+	grid-template-columns: repeat(12, 1fr);
+	/* grid-template-rows: auto; */
 	background-color: rgb(115,111,223);
 	color: white;
-	padding: 80px;
+	grid-template-areas: 
+	"contact-icon footer-col1 footer-col1 . . footer-col2 . footer-col3 . footer-col4  footer-col5 . "
 }
 
-h3 {
-	margin: 0;
-	font-size: 15px;
-	font-weight: 500;
+footer h3 {
+	font-size: 1.2vw;
+	font-weight: 700;
+	margin-top: 0;
 }
 
-p {
-	font-size: 12px;
+footer p {
+	font-size: 1vw;
 	font-weight: 300;
 }
 
+#facebook {
+	color: rgb(63, 63, 63);
+	font-size: 2vw;
+}
+
+#youtube {
+	color: rgb(63, 63, 63);
+	font-size: 2vw;
+}
+
+#twitter {
+	color: rgb(63, 63, 63);
+	font-size: 2vw;
+}
 
 .contact-icon {
-	grid-column: 1;
-	justify-self: end;
-	margin-top: 0;
-	margin-right: 20px;
+	grid-area: contact-icon;
+	float: left;
+	justify-self: start;
+	margin-right: 11px;
+	margin-top: 50px;
 }
+
 .col1 {
-	grid-column: 2;
-	font-weight: 500;
+	grid-area: footer-col1;
+	float: left;
+	margin-top: 50px;
+	justify-self: start;
+	margin-bottom: 50px;
 }
 
+.col1 span#phone {
+	font-size: 1.3vw;
+	font-weight: 700;
+}
 
+.col1 span {
+	font-size: 1vw;
+	font-weight: 300;
+}
 .col2 {
-	grid-column: 4;
-	
+	grid-area: footer-col2;
+	float: left;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
-
 .col3 {
-	grid-column: 6;
-	
+	grid-area: footer-col3;
+	float: left;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
 
 .col4 {
-	grid-column: 8;
+	grid-area: footer-col4;
+	float: left;
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
-
 .col5 {
-	grid-column: 11;
+	grid-area: footer-col5;
+	float: left;
+	margin-top: 50px;
+	justify-self: end;
+	margin-bottom: 50px; 
 }
 
-.col6 {
-	grid-column: 12;
-}
 
-
-
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 1033px) {
 	
+	#wrapper {
+		display: grid; 
+		grid-template-columns: repeat(9, 1fr);
+		grid-template-rows: repeat(auto auto auto auto);
+		margin-top: 20px;
+		max-width: 1500px;
+		-webkit-transition: width 2s;
+		transition: width 2s;
+		grid-template-areas:
+	}
+
+	
+	
+} */
+
+/* @media screen and (max-width: 956px) {
+	nav div {
+		grid-auto-rows: auto;
+	}
+	header {
+		font-size: .7em;
+	}
+
+	.navLinks {
+		display: inline-block;
+		font-size: .7em;
+	}
+	.logo {
+		font-size: 1em;
+	}
+} */
+
+@media screen and (min-width: 760px) {
+	#wrapper {
+		display: grid;
+		height: 100%;
+		grid-template-columns: repeat(12, 1fr);
+		grid-template-rows: auto auto auto auto;
+		margin-top: 20px;
+		max-width: 1600px;
+		grid-template-areas:
+		". . logo  . . . home whyus contact login support-btn ." 
+		". . . . main main main main . . . ."
+		". . . . input input input search-btn . . . ."
+		". . . . header-text header-text header-text header-text . . . ."
+		". . . . . circle-btn circle-btn . . . . . "
+		". . section1 section1 section1 section1 section1 section1 section1 section1 . ."
+		". . . . create-btn create-btn create-btn create-btn . . . ."
+		". . . . service-header service-header service-header service-header . . . . "
+		". scL scL scL scL scL scR scR scR scR scR ."
+		". bottom-container bottom-container bottom-container bottom-container . . . create-acnt-btn create-acnt-btn contact-btn .";
+		/* "footer footer footer footer footer footer footer footer footer footer footer footer";	 */
+	}
+
+}
+
+@media screen and (max-width: 860px) {
+	/* for mobile phones */
+	nav {
+		display: none;
+	}
+	#drk-purple {
+		top: 0;
+		transform: skewY(0deg);
+		z-index: -10;
+	}
+
+	#med-purple {
+		top: 10%;
+		height: 50%;
+		transform: skewY(0deg);
+		z-index: -10;
+	}
+
+	#light-purple {
+		top: 55%;
+		transform: skewY(0deg);
+		z-index: -10;
+	}
+
+	#gray {
+		top: 210%;
+		transform: skewY(0deg);
+		z-index: -10;
+	}
+
 }
